<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_left_bt"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@color/green"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/title_left_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/title_from_left_right"
            android:text="@string/back"
            android:textColor="@color/title_back_color_selector"
            android:textSize="@dimen/main_text_mid"
            android:gravity="center"
            android:drawableLeft="@drawable/global_back_btn_selector" />

        <TextView
            android:id="@+id/title_center_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/write_information"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_text_large" />

        <TextView
            android:id="@+id/title_right_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/title_from_left_right"
            android:gravity="center"
            android:text="@string/finish"
            android:textColor="@color/title_back_color_selector"
            android:textSize="@dimen/title_text_mid" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dip"
            android:text="@string/area"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_large" />

        <EditText
            android:id="@+id/user_area"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:background="@drawable/white_btn"
            android:gravity="top"
            android:maxLength="50"
            android:padding="10.0dip"
            android:inputType="none"
            android:textColorHint="@color/hint_text_color"
            android:textSize="@dimen/title_text_mid" />

        <TextView
            android:id="@+id/reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15.0dip"
            android:text="@string/limit"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_small" />
    </LinearLayout>

</LinearLayout>